mobile menu css done

--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -1,5 +1,11 @@
+//fonts
+$primary-font: "Roboto", sans-serif;
+$secondary-font: "Fira Sans", sans-serif;
+
+//colors
 $color-blue: #0000fe;
 $color-orange: #ff5520;
 $text-blue: #0101fe;
 $text-primary: #676767;
 $text-dark: #000000;
+$bg-gray: #f7f7f7;
