--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,1 +1,312 @@
-/* No CSS *//*# sourceMappingURL=style.css.map */
+@import url("https://fonts.googleapis.com/css2?family=Fira+Sans:wght@100;300;400;500;600;700;800&family=Roboto:wght@100;300;400;500;700;900&display=swap");
+a {
+  text-decoration: none;
+}
+
+ul {
+  list-style: none;
+  padding-inline-start: 0;
+}
+
+.small-title {
+  color: #0101fe;
+}
+
+@media only screen and (min-width: 1400px) {
+  .container {
+    max-width: 1200px;
+  }
+}
+
+@media only screen and (max-width: 992px) {
+  .container {
+    max-width: 100%;
+  }
+}
+
+* {
+  font-family: "Roboto";
+}
+
+.navigation-bar {
+  background-color: white;
+  display: flex;
+  padding: 1rem 10px 10px;
+}
+
+.navigation-bar .navbar-content {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.navigation-bar .navbar-content .navbar-logo {
+  width: 50%;
+}
+
+.navigation-bar .navbar-content .navbar-items {
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  padding: 0 1rem;
+  padding-top: 15px;
+}
+
+.navigation-bar .navbar-content .navbar-items li {
+  margin-right: 5rem;
+  position: relative;
+}
+
+.navigation-bar .navbar-content .navbar-items li:hover::before {
+  width: 22px;
+  opacity: 1;
+}
+
+.navigation-bar .navbar-content .navbar-items li:hover a::after {
+  width: 5px;
+  opacity: 1;
+}
+
+.navigation-bar .navbar-content .navbar-items li::before {
+  left: 0;
+  top: 30px;
+  width: 0%;
+  height: 5px;
+  content: "";
+  position: absolute;
+  border-radius: 30%;
+  background-color: #0000fe;
+  transition: 0.3s all ease-in-out;
+  opacity: 0;
+}
+
+.navigation-bar .navbar-content .navbar-items li.dropdown::after {
+  content: "+";
+  position: absolute;
+  color: #ff5520;
+  font-weight: 900;
+  font-size: 19px;
+  top: -5px;
+  right: -16px;
+}
+
+.navigation-bar .navbar-content .navbar-items li a {
+  color: #000000;
+  font-weight: 700;
+}
+
+.navigation-bar .navbar-content .navbar-items li a::after {
+  content: "";
+  top: 30px;
+  left: 25px;
+  width: 0px;
+  height: 5px;
+  position: absolute;
+  border-radius: 100%;
+  transition: 0.3s all ease-in-out;
+  background-color: #0000fe;
+  opacity: 0;
+}
+
+.navigation-bar .navbar-content .navbar-items .dropdown {
+  display: flex;
+  position: relative;
+}
+
+.navigation-bar .navbar-content .navbar-items .dropdown:hover .dropdown-content {
+  opacity: 1;
+  visibility: visible;
+  top: 45px;
+}
+
+.navigation-bar .navbar-content .navbar-items .dropdown .dropdown-content {
+  position: absolute;
+  top: 65px;
+  left: 0;
+  opacity: 0;
+  z-index: 2;
+  margin: 0px;
+  padding: 0px;
+  height: auto;
+  width: 200px;
+  border: none;
+  display: block;
+  border-radius: 0;
+  overflow: hidden;
+  visibility: hidden;
+  background-color: #fff;
+  transition: all 0.4s ease-in-out;
+  border-bottom: 2px solid #0000fe;
+  box-shadow: 0 5px 10px 0 rgba(83, 82, 82, 0.1);
+}
+
+.navigation-bar .navbar-content .navbar-items .dropdown .dropdown-content li {
+  width: 100%;
+  margin-left: 0;
+}
+
+.navigation-bar .navbar-content .navbar-items .dropdown .dropdown-content li:not(:last-child) {
+  border-bottom: 1px solid #e5e5e5;
+}
+
+.navigation-bar .navbar-content .navbar-items .dropdown .dropdown-content li a {
+  width: 100%;
+  color: #343434;
+  display: block;
+  font-size: 14px;
+  padding: 10px 25px;
+  position: relative;
+  transition: 0.3s all ease-in-out;
+}
+
+.navigation-bar .navbar-content .navbar-items .dropdown .dropdown-content li a:hover {
+  background-color: #0000fe;
+  color: white;
+}
+
+.navigation-bar .navbar-content .navbar-items .dropdown .dropdown-content li a::after {
+  content: none;
+}
+
+.navigation-bar .navbar-content .navbar-items .dropdown .dropdown-content li::before, .navigation-bar .navbar-content .navbar-items .dropdown .dropdown-content li::after {
+  content: none;
+}
+
+.navigation-bar .navbar-content .navbar-user {
+  display: flex;
+  width: 50%;
+  justify-content: flex-end;
+}
+
+.navigation-bar .navbar-content .navbar-user li {
+  padding-top: 15px;
+  position: relative;
+  padding-left: 10px;
+}
+
+.navigation-bar .navbar-content .navbar-user li:first-child::after {
+  content: "";
+  background-color: #d9d9d9;
+  width: 1px;
+  height: 18px;
+  position: absolute;
+  left: 33px;
+  top: 18px;
+}
+
+.navigation-bar .navbar-content .navbar-user li a {
+  color: #5a5a5a;
+  transition: all 300ms ease;
+}
+
+.navigation-bar .navbar-content .navbar-user li a:hover {
+  color: #0101fe;
+}
+
+.navigation-bar .navbar-content .menu-btn {
+  display: none;
+  padding-right: 10px;
+  cursor: pointer;
+  font-size: 30px;
+  color: #e3002a;
+}
+
+.navigation-bar .mobile-menu {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.9);
+  left: 0;
+  top: 0;
+}
+
+.navigation-bar .mobile-menu .menu-content {
+  position: fixed;
+  justify-content: center;
+  right: 0;
+  top: 0;
+  width: 301px;
+  height: 100%;
+  background-color: #000;
+}
+
+.navigation-bar .mobile-menu .menu-content .close-btn {
+  cursor: pointer;
+  color: #e3002a;
+  padding-left: 15px;
+  padding-top: 15px;
+  font-size: 20px;
+}
+
+.navigation-bar .mobile-menu .menu-content .mobile-logo {
+  padding-top: 10px;
+  text-align: center;
+}
+
+.navigation-bar .mobile-menu .menu-content .mobile-navbar {
+  width: 100%;
+  padding: 25px 35px;
+}
+
+.navigation-bar .mobile-menu .menu-content .mobile-navbar li {
+  width: 100%;
+  display: block;
+  transition: 0.3s all ease-in-out;
+}
+
+.navigation-bar .mobile-menu .menu-content .mobile-navbar li a {
+  padding: 0;
+  width: 100%;
+  color: #fff;
+  display: block;
+  font-weight: 600;
+  font-size: 14px;
+  padding: 10px 30px 10px 0;
+  text-transform: capitalize;
+  border-bottom: 1px solid rgba(78, 78, 78, 0.41);
+}
+
+.navigation-bar .mobile-menu .menu-content .mobile-navbar .mobile-dropdown {
+  position: relative;
+}
+
+.navigation-bar .mobile-menu .menu-content .mobile-navbar .mobile-dropdown span {
+  color: #9397a7;
+  position: absolute;
+  top: 3px;
+  right: 0;
+  height: 30px;
+  padding: 5px 10px;
+}
+
+.navigation-bar .mobile-menu .menu-content .mobile-navbar .mobile-dropdown li {
+  border: none;
+  padding: 1px 20px;
+  line-height: 1;
+}
+
+.navigation-bar .mobile-menu .menu-content .mobile-navbar .mobile-dropdown li a {
+  padding: 0;
+  width: 100%;
+  color: #fff;
+  display: block;
+  font-weight: 600;
+  font-size: 14px;
+  padding: 10px 30px 10px 0;
+  text-transform: capitalize;
+  border-bottom: 1px solid rgba(78, 78, 78, 0.41);
+}
+
+@media only screen and (max-width: 992px) {
+  .navigation-bar .navbar-content .navbar-items {
+    display: none;
+  }
+  .navigation-bar .navbar-content .navbar-user {
+    display: none;
+  }
+  .navigation-bar .navbar-content .menu-btn {
+    display: block;
+  }
+}
+/*# sourceMappingURL=style.css.map */
