--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -1,1 +1,4 @@
+@import url("https://fonts.googleapis.com/css2?family=Fira+Sans:wght@100;300;400;500;600;700;800&family=Roboto:wght@100;300;400;500;700;900&display=swap");
 @import "variables";
+@import "website";
+@import "navbar";
