--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -216,9 +216,21 @@ ul {
   position: fixed;
   width: 100%;
   height: 100%;
+  visibility: hidden;
+  left: 0;
+  top: 0;
+}
+
+.navigation-bar .mobile-menu .menu-overlay {
+  position: fixed;
+  width: 100%;
+  height: 100%;
   background-color: rgba(0, 0, 0, 0.9);
   left: 0;
   top: 0;
+  opacity: 0;
+  visibility: hidden;
+  transition: all 0.5s ease-in-out;
 }
 
 .navigation-bar .mobile-menu .menu-content {
@@ -229,6 +241,9 @@ ul {
   width: 301px;
   height: 100%;
   background-color: #000;
+  transform: translateX(100%);
+  transition: all 0.5s ease-in-out;
+  touch-action: none;
 }
 
 .navigation-bar .mobile-menu .menu-content .close-btn {
@@ -253,6 +268,7 @@ ul {
   width: 100%;
   display: block;
   transition: 0.3s all ease-in-out;
+  cursor: pointer;
 }
 
 .navigation-bar .mobile-menu .menu-content .mobile-navbar li a {
@@ -280,13 +296,17 @@ ul {
   padding: 5px 10px;
 }
 
-.navigation-bar .mobile-menu .menu-content .mobile-navbar .mobile-dropdown li {
+.navigation-bar .mobile-menu .menu-content .mobile-navbar .mobile-dropdown .mobile-dropdown-content {
+  display: none;
+}
+
+.navigation-bar .mobile-menu .menu-content .mobile-navbar .mobile-dropdown .mobile-dropdown-content li {
   border: none;
   padding: 1px 20px;
   line-height: 1;
 }
 
-.navigation-bar .mobile-menu .menu-content .mobile-navbar .mobile-dropdown li a {
+.navigation-bar .mobile-menu .menu-content .mobile-navbar .mobile-dropdown .mobile-dropdown-content li a {
   padding: 0;
   width: 100%;
   color: #fff;
@@ -308,5 +328,25 @@ ul {
   .navigation-bar .navbar-content .menu-btn {
     display: block;
   }
+}
+
+.mobile-active {
+  height: 100%;
+  overflow: hidden;
+  position: relative;
+}
+
+.mobile-active .mobile-menu {
+  visibility: visible;
+}
+
+.mobile-active .mobile-menu .menu-overlay {
+  opacity: 1;
+  visibility: visible;
+}
+
+.mobile-active .mobile-menu .menu-content {
+  transform: translate(0);
+  transition: all 0.7s ease-out;
 }
 /*# sourceMappingURL=style.css.map */
