--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -49,8 +49,9 @@ ul {
   display: flex;
   justify-content: center;
   width: 100%;
-  padding: 0 1rem;
   padding-top: 15px;
+  margin-left: 30px;
+  padding-left: 5px;
 }
 
 .navigation-bar .navbar-content .navbar-items li {
@@ -198,6 +199,7 @@ ul {
 .navigation-bar .navbar-content .navbar-user li a {
   color: #5a5a5a;
   transition: all 300ms ease;
+  cursor: pointer;
 }
 
 .navigation-bar .navbar-content .navbar-user li a:hover {
@@ -243,7 +245,7 @@ ul {
   background-color: #000;
   transform: translateX(100%);
   transition: all 0.5s ease-in-out;
-  touch-action: none;
+  overflow-y: scroll;
 }
 
 .navigation-bar .mobile-menu .menu-content .close-btn {
@@ -348,5 +350,179 @@ ul {
 .mobile-active .mobile-menu .menu-content {
   transform: translate(0);
   transition: all 0.7s ease-out;
+}
+
+.modal-dialog {
+  max-width: 570px;
+}
+
+.modal-dialog .modal-content {
+  border: none;
+  overflow: hidden;
+  border-radius: 10px;
+}
+
+.modal-dialog .modal-content .modal-header {
+  position: relative;
+  z-index: 1;
+  padding: 30px 0px;
+  background-image: url("/assets/img/pop up form banner.jpg");
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+
+.modal-dialog .modal-content .modal-header::after {
+  top: 0;
+  z-index: -1;
+  width: 100%;
+  content: "";
+  height: 100%;
+  position: absolute;
+  background-color: rgba(0, 0, 255, 0.7);
+}
+
+.modal-dialog .modal-content .modal-header .modal-head-content {
+  text-align: center;
+  margin: 0 auto;
+  max-width: 310px;
+}
+
+.modal-dialog .modal-content .modal-header .modal-head-content p {
+  color: #fff;
+  font-size: 15px;
+  padding-top: 15px;
+}
+
+.modal-dialog .modal-content .modal-body {
+  padding: 50px;
+  padding-bottom: 25px;
+}
+
+.modal-dialog .modal-content .modal-body .modal-signup-login .modal-signup-login-btn {
+  display: flex;
+  justify-content: center;
+  padding-bottom: 28px;
+}
+
+.modal-dialog .modal-content .modal-body .modal-signup-login .modal-signup-login-btn .signup-btn,
+.modal-dialog .modal-content .modal-body .modal-signup-login .modal-signup-login-btn .login-btn {
+  padding: 10px 40px;
+  border: 1px solid #e5e5e5;
+  cursor: pointer;
+}
+
+.modal-dialog .modal-content .modal-body .modal-signup-login .modal-signup-login-btn .login-btn {
+  background-color: #0000fe;
+  color: white;
+  border-top-left-radius: 18px;
+  border-bottom-left-radius: 18px;
+  font-size: 15px;
+  font-weight: 700;
+}
+
+.modal-dialog .modal-content .modal-body .modal-signup-login .modal-signup-login-btn .signup-btn {
+  background-color: white;
+  border-top-right-radius: 18px;
+  border-bottom-right-radius: 18px;
+  margin-left: -1px;
+  color: #000;
+  font-size: 15px;
+  font-weight: 700;
+}
+
+.modal-dialog .modal-content .modal-body .modal-signup-login .modal-tab-content .login-tab,
+.modal-dialog .modal-content .modal-body .modal-signup-login .modal-tab-content .signup-tab {
+  max-width: 370px;
+  margin: 0 auto;
+  display: block;
+}
+
+.modal-dialog .modal-content .modal-body .modal-signup-login .modal-tab-content .login-tab form input[type="text"],
+.modal-dialog .modal-content .modal-body .modal-signup-login .modal-tab-content .login-tab form input[type="password"],
+.modal-dialog .modal-content .modal-body .modal-signup-login .modal-tab-content .signup-tab form input[type="text"],
+.modal-dialog .modal-content .modal-body .modal-signup-login .modal-tab-content .signup-tab form input[type="password"] {
+  width: 100%;
+  height: 50px;
+  border: none;
+  padding-left: 20px;
+  margin-bottom: 20px;
+  border-radius: 10px;
+  background-color: #efeff0;
+}
+
+.modal-dialog .modal-content .modal-body .modal-signup-login .modal-tab-content .login-tab form input[type="text"]:focus,
+.modal-dialog .modal-content .modal-body .modal-signup-login .modal-tab-content .login-tab form input[type="password"]:focus,
+.modal-dialog .modal-content .modal-body .modal-signup-login .modal-tab-content .signup-tab form input[type="text"]:focus,
+.modal-dialog .modal-content .modal-body .modal-signup-login .modal-tab-content .signup-tab form input[type="password"]:focus {
+  outline: none;
+  box-shadow: none;
+  text-decoration: none;
+  color: inherit;
+}
+
+.modal-dialog .modal-content .modal-body .modal-signup-login .modal-tab-content .login-tab form span,
+.modal-dialog .modal-content .modal-body .modal-signup-login .modal-tab-content .signup-tab form span {
+  color: #555555;
+}
+
+.modal-dialog .modal-content .modal-body .modal-signup-login .modal-tab-content .login-tab form span input[type="checkbox"],
+.modal-dialog .modal-content .modal-body .modal-signup-login .modal-tab-content .signup-tab form span input[type="checkbox"] {
+  width: 15px;
+  height: 15px;
+  margin-right: 12px;
+}
+
+.modal-dialog .modal-content .modal-body .modal-signup-login .modal-tab-content .login-tab form a,
+.modal-dialog .modal-content .modal-body .modal-signup-login .modal-tab-content .signup-tab form a {
+  color: #000;
+  float: right;
+  font-weight: 700;
+  padding-bottom: 15px;
+}
+
+.modal-dialog .modal-content .modal-body .modal-signup-login .modal-tab-content .login-tab form button[type="submit"],
+.modal-dialog .modal-content .modal-body .modal-signup-login .modal-tab-content .signup-tab form button[type="submit"] {
+  color: #fff;
+  width: 100%;
+  height: 50px;
+  border: none;
+  font-weight: 700;
+  border-radius: 10px;
+  margin-bottom: 15px;
+  margin-top: 15px;
+  background-color: #ff5520;
+}
+
+.modal-dialog .modal-content .modal-body .modal-signup-login .modal-tab-content .login-tab form button[type="submit"]:focus,
+.modal-dialog .modal-content .modal-body .modal-signup-login .modal-tab-content .signup-tab form button[type="submit"]:focus {
+  outline: none;
+  box-shadow: none;
+  text-decoration: none;
+  color: inherit;
+}
+
+.modal-dialog .modal-content .modal-body .modal-signup-login .modal-tab-content .login-tab p,
+.modal-dialog .modal-content .modal-body .modal-signup-login .modal-tab-content .signup-tab p {
+  text-align: center;
+  color: #555555;
+}
+
+.modal-dialog .modal-content .modal-body .modal-signup-login .modal-tab-content .login-tab p a,
+.modal-dialog .modal-content .modal-body .modal-signup-login .modal-tab-content .signup-tab p a {
+  color: #000;
+  font-weight: 700;
+}
+
+.modal-dialog .modal-content .modal-body .modal-signup-login .modal-tab-content .signup-tab {
+  max-width: 470px;
+  display: none;
+}
+
+.modal-dialog .modal-content .modal-body .modal-signup-login .modal-tab-content .signup-tab form input[type="text"],
+.modal-dialog .modal-content .modal-body .modal-signup-login .modal-tab-content .signup-tab form input[type="password"] {
+  width: 45% !important;
+  float: left !important;
+  margin: 0px 10px 20px !important;
 }
 /*# sourceMappingURL=style.css.map */
