--- a/assets/scss/_navbar.scss
+++ b/assets/scss/_navbar.scss
@@ -18,8 +18,9 @@
       display: flex;
       justify-content: center;
       width: 100%;
-      padding: 0 1rem;
       padding-top: 15px;
+      margin-left: 30px;
+      padding-left: 5px;
       li {
         margin-right: 5rem;
         position: relative;
@@ -135,7 +136,6 @@
       width: 50%;
       justify-content: flex-end;
       li {
-        // margin-left: 1.3rem;
         padding-top: 15px;
         position: relative;
         padding-left: 10px;
@@ -153,6 +153,7 @@
         a {
           color: #5a5a5a;
           transition: all 300ms ease;
+          cursor: pointer;
           &:hover {
             color: $text-blue;
           }
@@ -195,7 +196,7 @@
       background-color: #000;
       transform: translateX(100%);
       transition: all 0.5s ease-in-out;
-      touch-action: none;
+      overflow-y: scroll;
       .close-btn {
         cursor: pointer;
         color: #e3002a;
