First section animations added

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,8 @@
 @import url("https://fonts.googleapis.com/css2?family=Fira+Sans:wght@100;300;400;500;600;700;800&family=Roboto:wght@100;300;400;500;700;900&display=swap");
+body {
+  overflow-x: hidden;
+}
+
 a {
   text-decoration: none;
 }
@@ -31,7 +35,7 @@ ul {
 .navigation-bar {
   background-color: white;
   display: flex;
-  padding: 1rem 10px 10px;
+  padding: 1rem 15px 10px;
 }
 
 .navigation-bar .navbar-content {
@@ -49,7 +53,7 @@ ul {
   display: flex;
   justify-content: center;
   width: 100%;
-  padding-top: 15px;
+  padding-top: 20px;
   margin-left: 30px;
   padding-left: 5px;
 }
@@ -183,16 +187,20 @@ ul {
 .navigation-bar .navbar-content .navbar-user li {
   padding-top: 15px;
   position: relative;
-  padding-left: 10px;
+  padding-left: 15px;
+}
+
+.navigation-bar .navbar-content .navbar-user li:first-child {
+  padding-left: 0;
 }
 
 .navigation-bar .navbar-content .navbar-user li:first-child::after {
   content: "";
   background-color: #d9d9d9;
-  width: 1px;
+  width: 2px;
   height: 18px;
   position: absolute;
-  left: 33px;
+  left: 26px;
   top: 18px;
 }
 
@@ -350,6 +358,40 @@ ul {
 .mobile-active .mobile-menu .menu-content {
   transform: translate(0);
   transition: all 0.7s ease-out;
+}
+
+.btn-usual {
+  color: #fff;
+  width: 160px;
+  height: 55px;
+  display: block;
+  overflow: hidden;
+  font-weight: 700;
+  line-height: 55px;
+  border-radius: 40px;
+  background-color: #ff5520;
+  position: relative;
+  z-index: 1;
+  text-align: center;
+}
+
+.btn-usual:hover::after {
+  height: 100%;
+  width: 150%;
+}
+
+.btn-usual::after {
+  top: 0;
+  width: 0;
+  left: -40%;
+  content: "";
+  z-index: -1;
+  height: 100%;
+  position: absolute;
+  transform: skew(50deg);
+  transition-duration: 0.6s;
+  transform-origin: top left;
+  background-color: #0000fe;
 }
 
 .modal-dialog {
@@ -524,5 +566,230 @@ ul {
   width: 45% !important;
   float: left !important;
   margin: 0px 10px 20px !important;
+}
+
+#first {
+  background-color: #f7f7f7;
+  padding-bottom: 140px;
+}
+
+#first .first-dot-square {
+  z-index: 1;
+}
+
+#first .dot-square1 {
+  width: 7px;
+  height: 7px;
+  top: 200px;
+  left: 150px;
+  background-color: #00a4ff;
+  box-shadow: 0px 6px 13px 0px rgba(0, 0, 254, 0.466);
+  animation: animationFramesOne 12s infinite alternate;
+}
+
+#first .dot-square2 {
+  top: 150px;
+  left: 25%;
+  width: 10px;
+  height: 10px;
+  background-color: #000;
+  box-shadow: 0px 6px 13px 0px rgba(0, 0, 0, 0.178);
+  animation: animationFramesTwo 18s infinite alternate;
+}
+
+#first .dot-square3 {
+  bottom: 150px;
+  left: 150px;
+  width: 10px;
+  height: 10px;
+  background-color: #ff5520;
+  box-shadow: 0px 6px 13px 0px rgba(255, 84, 32, 0.158);
+  animation: animationFramesOne 12s infinite alternate;
+}
+
+#first .dot-square4 {
+  width: 10px;
+  height: 10px;
+  right: 50%;
+  bottom: 200px;
+  background-color: #0000fe;
+  box-shadow: 0px 6px 13px 0px rgba(0, 0, 254, 0.26);
+  animation: animationFramesTwo 18s infinite alternate;
+}
+
+#first .banner {
+  position: relative;
+  width: 100%;
+}
+
+#first .banner img {
+  position: absolute;
+  right: -139px;
+  max-width: 50%;
+}
+
+#first .first-content {
+  padding-top: 130px;
+  z-index: 1;
+  position: relative;
+}
+
+#first .first-content .subtitle {
+  display: flex;
+  align-items: baseline;
+}
+
+#first .first-content .subtitle span {
+  background: blue;
+  color: white;
+  border-radius: 32px;
+  padding: 11px 30px;
+  z-index: 2;
+  font-size: 16px;
+  font-weight: 500;
+}
+
+#first .first-content .subtitle p {
+  padding: 11px 36px;
+  background: #efeff0;
+  margin-left: -29px;
+  border-radius: 32px;
+  z-index: 1;
+  color: #000000;
+  font-size: 16px;
+  font-weight: 500;
+}
+
+#first .first-content .animated-title h1 {
+  color: #000;
+  font-size: 58px;
+  font-weight: 700;
+  line-height: 1.2;
+  padding-bottom: 35px;
+}
+
+#first .first-content .animated-title h1 span {
+  color: #0000fe;
+}
+
+#first .first-content p {
+  color: #4f4f4f;
+  font-size: 20px;
+  line-height: 1.6;
+  padding-bottom: 40px;
+}
+
+#first .first-content a:hover {
+  color: white;
+}
+
+#first .first-content .buttons {
+  display: flex;
+}
+
+#first .first-content .buttons .btn-usual {
+  margin-right: 10px;
+}
+
+#first .first-content .buttons .btn-play {
+  margin-left: 25px;
+  width: 50px;
+  height: 50px;
+  margin-top: 5px;
+  line-height: 50px;
+  border-radius: 100%;
+  transition: 0.3s all ease-in-out;
+  background-color: #0000fe;
+  text-align: center;
+  color: white;
+  position: relative;
+}
+
+#first .first-content .buttons .btn-play:hover {
+  background-color: #e3002a;
+}
+
+#first .first-content .buttons .btn-play .play-border {
+  height: 100%;
+  border-radius: 60px;
+  position: absolute;
+  animation-play-state: running;
+  border: 2px solid rgba(0, 0, 0, 0.15);
+  animation: border_animation 3.9s linear 0s infinite;
+  top: 0;
+  left: 0;
+  opacity: 0;
+  width: 100%;
+}
+
+#first .first-content .buttons .btn-play .border-delay-2 {
+  animation-delay: 1.3s;
+}
+
+#first .first-content .buttons .btn-play .border-delay-3 {
+  animation-delay: 2.6s;
+}
+
+@media only screen and (max-width: 992px) {
+  #first .banner {
+    display: none;
+  }
+}
+
+@keyframes animationFramesTwo {
+  0% {
+    transform: translate(0px, 0px) rotate(0deg) scale(1);
+  }
+  20% {
+    transform: translate(73px, -1px) rotate(36deg) scale(0.9);
+  }
+  40% {
+    transform: translate(141px, 72px) rotate(72deg) scale(1);
+  }
+  60% {
+    transform: translate(83px, 122px) rotate(108deg) scale(1.2);
+  }
+  80% {
+    transform: translate(-40px, 72px) rotate(104deg) scale(1.1);
+  }
+  100% {
+    transform: translate(0px, 0px) rotate(0deg) scale(1);
+  }
+}
+
+@keyframes animationFramesOne {
+  0% {
+    transform: translate(0px, 0px) rotate(0deg);
+  }
+  20% {
+    transform: translate(73px, -1px) rotate(36deg);
+  }
+  40% {
+    transform: translate(111px, 72px) rotate(72deg);
+  }
+  60% {
+    transform: translate(93px, 122px) rotate(108deg);
+  }
+  80% {
+    transform: translate(-70px, 72px) rotate(124deg);
+  }
+  100% {
+    transform: translate(0px, 0px) rotate(0deg);
+  }
+}
+
+@keyframes border_animation {
+  0% {
+    transform: scale(1);
+    opacity: 0;
+  }
+  20% {
+    transform: scale(1.24);
+    opacity: 1;
+  }
+  100% {
+    transform: scale(2.1);
+    opacity: 0;
+  }
 }
 /*# sourceMappingURL=style.css.map */
