--- a/assets/scss/_tools.scss
+++ b/assets/scss/_tools.scss
@@ -14,3 +14,36 @@
     }
   }
 }
+.btn-usual {
+  color: #fff;
+  width: 160px;
+  height: 55px;
+  display: block;
+  overflow: hidden;
+  font-weight: 700;
+  line-height: 55px;
+  border-radius: 40px;
+  background-color: $color-orange;
+  position: relative;
+  z-index: 1;
+  text-align: center;
+  &:hover {
+    &::after {
+      height: 100%;
+      width: 150%;
+    }
+  }
+  &::after {
+    top: 0;
+    width: 0;
+    left: -40%;
+    content: "";
+    z-index: -1;
+    height: 100%;
+    position: absolute;
+    transform: skew(50deg);
+    transition-duration: 0.6s;
+    transform-origin: top left;
+    background-color: #0000fe;
+  }
+}
