--- a/assets/scss/components/_first.scss
+++ b/assets/scss/components/_first.scss
@@ -1,7 +1,8 @@
 #first {
-  background-color: $bg-gray;
-  padding-bottom: 190px;
+  //   background-color: $bg-gray;
+  padding-bottom: 50px;
   overflow: hidden;
+
   .first-dot-square {
     z-index: 1;
   }
@@ -41,123 +42,130 @@
     box-shadow: 0px 6px 13px 0px rgba(0, 0, 254, 0.26);
     animation: animationFramesTwo 18s infinite alternate;
   }
-  .banner {
+  //   .banner-img {
+  //     text-align: right;
+  //   }
+  .banner-content {
     position: relative;
-    width: 100%;
-    img {
-      position: absolute;
-      right: -139px;
-      max-width: 50%;
+    background-color: $bg-gray;
+    padding-bottom: 175px;
+    .banner {
+      width: 100%;
+      img {
+        position: absolute;
+        right: -139px;
+        max-width: 50%;
+      }
     }
-  }
-  .first-content {
-    padding-top: 130px;
-    z-index: 1;
-    position: relative;
-    .subtitle {
-      display: flex;
-      align-items: baseline;
-      span {
-        background: blue;
-        color: white;
-        border-radius: 32px;
-        padding: 11px 30px;
-        z-index: 2;
-        font-size: 16px;
-        font-weight: 500;
+    .first-content {
+      padding-top: 130px;
+      z-index: 1;
+      position: relative;
+      .subtitle {
+        display: flex;
+        align-items: baseline;
+        span {
+          background: blue;
+          color: white;
+          border-radius: 32px;
+          padding: 11px 30px;
+          z-index: 2;
+          font-size: 16px;
+          font-weight: 500;
+        }
+        p {
+          padding: 11px 36px;
+          background: #efeff0;
+          margin-left: -29px;
+          border-radius: 32px;
+          z-index: 1;
+          color: #000000;
+          font-size: 16px;
+          font-weight: 500;
+        }
+      }
+      .animated-title {
+        h1 {
+          color: #000;
+          font-size: 58px;
+          font-weight: 700;
+          line-height: 1.2;
+          padding-bottom: 35px;
+          span {
+            color: $color-blue;
+          }
+        }
       }
       p {
-        padding: 11px 36px;
-        background: #efeff0;
-        margin-left: -29px;
-        border-radius: 32px;
-        z-index: 1;
-        color: #000000;
-        font-size: 16px;
-        font-weight: 500;
+        color: #4f4f4f;
+        font-size: 20px;
+        line-height: 1.6;
+        padding-bottom: 40px;
       }
-    }
-    .animated-title {
-      h1 {
-        color: #000;
-        font-size: 58px;
-        font-weight: 700;
-        line-height: 1.2;
-        padding-bottom: 35px;
-        span {
-          color: $color-blue;
-        }
-      }
-    }
-    p {
-      color: #4f4f4f;
-      font-size: 20px;
-      line-height: 1.6;
-      padding-bottom: 40px;
-    }
-    a {
-      &:hover {
-        color: white;
-      }
-    }
-    .buttons {
-      display: flex;
-      .btn-usual {
-        margin-right: 10px;
-      }
-      .btn-play {
-        margin-left: 25px;
-        width: 50px;
-        height: 50px;
-        margin-top: 5px;
-        line-height: 50px;
-        border-radius: 100%;
-        transition: 0.3s all ease-in-out;
-        background-color: #0000fe;
-        text-align: center;
-        color: white;
-        position: relative;
+      a {
         &:hover {
-          background-color: #e3002a;
-        }
-        .play-border {
-          height: 100%;
-          border-radius: 60px;
-          position: absolute;
-          animation-play-state: running;
-          border: 2px solid rgba(0, 0, 0, 0.15);
-          animation: border_animation 3.9s linear 0s infinite;
-          top: 0;
-          left: 0;
-          opacity: 0;
-          width: 100%;
-        }
-        .border-delay-2 {
-          animation-delay: 1.3s;
-        }
-        .border-delay-3 {
-          animation-delay: 2.6s;
+          color: white;
         }
       }
-    }
-    .background-word {
-      left: 0;
-      opacity: 0.05;
-      z-index: -1;
-      line-height: 1;
-      color: #00003d;
-      font-weight: 700;
-      font-size: 265px;
-      position: absolute;
-      font-family: "Fira Sans";
-      bottom: -209px;
+      .buttons {
+        display: flex;
+        .btn-usual {
+          margin-right: 10px;
+        }
+        .btn-play {
+          margin-left: 25px;
+          width: 50px;
+          height: 50px;
+          margin-top: 5px;
+          line-height: 50px;
+          border-radius: 100%;
+          transition: 0.3s all ease-in-out;
+          background-color: #0000fe;
+          text-align: center;
+          color: white;
+          position: relative;
+          &:hover {
+            background-color: #e3002a;
+          }
+          .play-border {
+            height: 100%;
+            border-radius: 60px;
+            position: absolute;
+            animation-play-state: running;
+            border: 2px solid rgba(0, 0, 0, 0.15);
+            animation: border_animation 3.9s linear 0s infinite;
+            top: 0;
+            left: 0;
+            opacity: 0;
+            width: 100%;
+          }
+          .border-delay-2 {
+            animation-delay: 1.3s;
+          }
+          .border-delay-3 {
+            animation-delay: 2.6s;
+          }
+        }
+      }
+      .background-word {
+        left: 0;
+        opacity: 0.05;
+        z-index: -1;
+        line-height: 1;
+        color: #00003d;
+        font-weight: 700;
+        font-size: 265px;
+        position: absolute;
+        font-family: "Fira Sans";
+        bottom: -209px;
+      }
     }
   }
 }
 //media
 @media only screen and(max-width:992px) {
   #first {
-    .banner {
+    .banner-img {
       display: none;
     }
   }
