--- a/assets/scss/components/_first.scss
+++ b/assets/scss/components/_first.scss
@@ -1,6 +1,6 @@
 #first {
   //   background-color: $bg-gray;
-  padding-bottom: 50px;
+  padding-bottom: 160px;
   overflow: hidden;
 
   .first-dot-square {
@@ -165,7 +165,7 @@
 //media
 @media only screen and(max-width:992px) {
   #first {
-    .banner-img {
+    .banner {
       display: none;
     }
   }
