--- a/assets/scss/_tools.scss
+++ b/assets/scss/_tools.scss
@@ -27,6 +27,9 @@
   position: relative;
   z-index: 1;
   text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   &:hover {
     &::after {
       height: 100%;
