--- a/assets/scss/components/_first.scss
+++ b/assets/scss/components/_first.scss
@@ -121,9 +121,11 @@
           border-radius: 100%;
           transition: 0.3s all ease-in-out;
           background-color: #0000fe;
-          text-align: center;
           color: white;
           position: relative;
+          display: flex;
+          align-items: center;
+          justify-content: center;
           &:hover {
             background-color: #e3002a;
           }
