--- a/assets/scss/components/_first.scss
+++ b/assets/scss/components/_first.scss
@@ -126,6 +126,9 @@
           display: flex;
           align-items: center;
           justify-content: center;
+          &:focus {
+            outline: none;
+          }
           &:hover {
             background-color: #e3002a;
           }
