--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -398,6 +398,61 @@ ul {
   background-color: #0000fe;
 }
 
+.section-title {
+  position: relative;
+  max-width: 590px;
+  margin: 0 auto;
+  text-align: center;
+}
+
+.section-title .background-title {
+  position: absolute;
+  top: -60px;
+  left: 50%;
+  opacity: 0.04;
+  color: #53536c;
+  line-height: 1;
+  font-size: 100px;
+  font-weight: 900;
+  margin-bottom: 0;
+  text-align: center;
+  transform: translateX(-50%);
+}
+
+.section-title .section-subtitle {
+  font-size: 18px;
+  font-weight: 700;
+  color: #0000fe;
+  padding: 0px 15px;
+  position: relative;
+}
+
+.section-title .section-bigtitle {
+  color: #000;
+  font-size: 40px;
+  font-weight: 700;
+  line-height: 1.125;
+  padding: 15px 0px 20px;
+}
+
+@media only screen and (max-width: 560px) {
+  .section-title .background-title {
+    font-size: 77px;
+  }
+  .section-title .section-bigtitle {
+    font-size: 30px;
+  }
+}
+
+@media only screen and (max-width: 396px) {
+  .section-title .background-title {
+    font-size: 64px;
+  }
+  .section-title .section-bigtitle {
+    font-size: 24px;
+  }
+}
+
 .modal-dialog {
   max-width: 570px;
 }
@@ -573,7 +628,7 @@ ul {
 }
 
 #first {
-  padding-bottom: 160px;
+  padding-bottom: 170px;
   overflow: hidden;
 }
 
@@ -624,7 +679,6 @@ ul {
 #first .banner-content {
   position: relative;
   background-color: #f7f7f7;
-  padding-bottom: 175px;
 }
 
 #first .banner-content .banner {
@@ -641,11 +695,13 @@ ul {
   padding-top: 130px;
   z-index: 1;
   position: relative;
+  padding-bottom: 160px;
 }
 
 #first .banner-content .first-content .subtitle {
   display: flex;
   align-items: baseline;
+  margin-bottom: 2rem;
 }
 
 #first .banner-content .first-content .subtitle span {
@@ -755,7 +811,7 @@ ul {
   font-size: 265px;
   position: absolute;
   font-family: "Fira Sans";
-  bottom: -209px;
+  bottom: -52px;
 }
 
 @media only screen and (max-width: 992px) {
@@ -823,7 +879,7 @@ ul {
 
 .banner-search {
   position: relative;
-  top: -207px;
+  top: -197px;
   z-index: 1;
 }
 
@@ -843,8 +899,8 @@ ul {
 }
 
 .banner-search .search .banner-search-shape2 {
-  bottom: -77px;
-  right: -55px;
+  bottom: -58px;
+  right: -64px;
   z-index: -1;
 }
 
