--- a/assets/scss/components/_first.scss
+++ b/assets/scss/components/_first.scss
@@ -1,6 +1,5 @@
 #first {
-  //   background-color: $bg-gray;
-  padding-bottom: 160px;
+  padding-bottom: 170px;
   overflow: hidden;
 
   .first-dot-square {
@@ -42,13 +41,10 @@
     box-shadow: 0px 6px 13px 0px rgba(0, 0, 254, 0.26);
     animation: animationFramesTwo 18s infinite alternate;
   }
-  //   .banner-img {
-  //     text-align: right;
-  //   }
+
   .banner-content {
     position: relative;
     background-color: $bg-gray;
-    padding-bottom: 175px;
     .banner {
       width: 100%;
       img {
@@ -61,9 +57,11 @@
       padding-top: 130px;
       z-index: 1;
       position: relative;
+      padding-bottom: 160px;
       .subtitle {
         display: flex;
         align-items: baseline;
+        margin-bottom: 2rem;
         span {
           background: blue;
           color: white;
@@ -162,7 +160,7 @@
         font-size: 265px;
         position: absolute;
         font-family: "Fira Sans";
-        bottom: -209px;
+        bottom: -52px;
       }
     }
   }
