--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1102,4 +1102,173 @@ ul {
 #categories .categories-slider .owl-dots .owl-dot:focus {
   outline: none;
 }
+
+#course {
+  background-color: #f7f7f7;
+  padding-top: 110px;
+}
+
+#course .section-title .background-title {
+  color: white;
+  opacity: 0.7;
+}
+
+#course .course-card {
+  background-color: white;
+  padding: 25px;
+  border-radius: 10px;
+  padding-bottom: 0;
+  transition: 0.3s all ease-in-out;
+  box-shadow: 0px 6px 38px 0px rgba(0, 0, 0, 0.04);
+  margin-bottom: 10px;
+}
+
+#course .course-card .course-card-header {
+  margin-bottom: 10px;
+  overflow: hidden;
+}
+
+#course .course-card .course-card-header img {
+  max-width: 100%;
+  border-radius: 5px;
+  transition: 0.5s all ease-in-out;
+}
+
+#course .course-card .course-card-body {
+  margin-bottom: 12px;
+  padding-bottom: 15px;
+  border-bottom: 2px solid #e9e9e9;
+}
+
+#course .course-card .course-card-body .price {
+  display: flex;
+  color: #555555;
+  font-size: 18px;
+  align-items: baseline;
+}
+
+#course .course-card .course-card-body .price p {
+  margin-right: 12px;
+  margin-left: 12px;
+  text-decoration: line-through;
+}
+
+#course .course-card .course-card-body .price strong {
+  color: #000;
+  font-size: 28px;
+  font-weight: 700;
+}
+
+#course .course-card .course-card-body .course-name {
+  font-size: 18px;
+  font-weight: 700;
+  line-height: 1.444;
+  padding-bottom: 8px;
+}
+
+#course .course-card .course-card-body .course-name a {
+  color: #000;
+  transition: 0.3s all ease-in-out;
+}
+
+#course .course-card .course-card-body .counts {
+  display: flex;
+  justify-content: space-between;
+}
+
+#course .course-card .course-card-body .counts a {
+  font-size: 14px;
+  color: #565656;
+}
+
+#course .course-card .course-card-body .counts a i {
+  color: #0000fe;
+  margin-right: 5px;
+}
+
+#course .course-card .course-card-footer {
+  display: flex;
+  justify-content: space-around;
+  align-items: baseline;
+}
+
+#course .course-card .course-card-footer .votes {
+  display: flex;
+}
+
+#course .course-card .course-card-footer .votes ul {
+  display: flex;
+  margin-right: 10px;
+}
+
+#course .course-card .course-card-footer .votes ul li {
+  color: #ffc601;
+  font-size: 13px;
+}
+
+#course .course-card .course-card-footer .votes span {
+  font-size: 14px;
+  color: #555555;
+}
+
+#course .course-card .course-card-footer .course-btn {
+  height: 30px;
+  width: 30px;
+  line-height: 30px;
+  text-align: center;
+  border-radius: 100%;
+  background-color: #0000fe;
+  color: #fff;
+  font-size: 14px;
+}
+
+#course .course-card .course-card-footer .course-btn i {
+  transition: 0.3s all ease-in-out;
+}
+
+#course .course-card:hover {
+  box-shadow: -3.285px 20.741px 51px 0px rgba(0, 0, 47, 0.233);
+}
+
+#course .course-card:hover .course-card-header img {
+  transform: scale(1.1);
+}
+
+#course .course-card:hover .course-card-body .course-name a {
+  color: #ff5520;
+}
+
+#course .course-card:hover .course-card-footer .course-btn {
+  background-color: #ff5520;
+}
+
+#course .course-card:hover .course-card-footer .course-btn i {
+  animation: toBottomFromTop 0.3s forwards;
+}
+
+@keyframes toBottomFromTop {
+  49% {
+    transform: translateY(100%);
+  }
+  50% {
+    opacity: 0;
+    transform: translateY(-100%);
+  }
+  51% {
+    opacity: 1;
+  }
+}
+
+@keyframes toBottomFromTop {
+  49% {
+    transform: translateY(100%);
+  }
+  50% {
+    opacity: 0;
+    transform: translateY(-100%);
+  }
+  51% {
+    opacity: 1;
+  }
+}
 /*# sourceMappingURL=style.css.map */
