--- a/assets/scss/components/_course.scss
+++ b/assets/scss/components/_course.scss
@@ -14,7 +14,7 @@
     padding-bottom: 0;
     transition: 0.3s all ease-in-out;
     box-shadow: 0px 6px 38px 0px rgba(0, 0, 0, 0.04);
-    margin-bottom: 10px;
+    margin-bottom: 40px;
     .course-card-header {
       margin-bottom: 10px;
       overflow: hidden;
@@ -121,6 +121,48 @@
             animation: toBottomFromTop 0.3s forwards;
           }
         }
+      }
+    }
+  }
+  .btn-usual {
+    background-color: $color-blue;
+    height: 50px;
+    width: 170px;
+    font-size: 15px;
+    margin: 0 auto;
+    line-height: 50px;
+    i {
+      margin-left: 10px;
+      transition: 0.3s all ease-in-out;
+    }
+    &:hover {
+      color: white;
+      i {
+        animation: toBottomFromTop 0.3s forwards;
+      }
+    }
+    &::after {
+      background-color: $color-orange;
+    }
+  }
+}
+
+//media
+@media only screen and(max-width:992px) {
+  #course {
+    .course-card {
+      .course-card-header {
+        img {
+          width: 100%;
+        }
+      }
+      .course-card-body {
+        text-align: center;
+        .price {
+          justify-content: center;
+        }
+      }
+      .course-card-footer {
       }
     }
   }
