--- a/assets/scss/components/_course.scss
+++ b/assets/scss/components/_course.scss
@@ -1,6 +1,6 @@
 #course {
   background-color: $bg-gray;
-  padding-top: 110px;
+  padding: 110px 0;
   .section-title {
     .background-title {
       color: white;
