--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -8,3 +8,5 @@
 @import "components/search";
 @import "components/categories";
 @import "components/course";
+@import "components/registration";
+@import "components/testimonials";
