--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1409,4 +1409,147 @@ ul {
     padding: 19px !important;
   }
 }
+
+#testimonials {
+  padding-top: 110px;
+}
+
+#testimonials .testimonials-slider {
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+
+#testimonials .testimonials-slider .testimonials-item {
+  background-color: white;
+  transition: 0.3s all ease-in-out;
+  box-shadow: 0px 12px 35px 0px rgba(12, 12, 12, 0.062);
+  border-radius: 10px;
+  padding: 40px 30px 25px;
+}
+
+#testimonials .testimonials-slider .testimonials-item .quoute-icon {
+  text-align: right;
+}
+
+#testimonials .testimonials-slider .testimonials-item .quoute-icon i {
+  color: #efefef;
+  line-height: 1;
+  font-size: 30px;
+  transition: 0.3s all ease-in-out;
+}
+
+#testimonials .testimonials-slider .testimonials-item .testimonial-text h6 {
+  font-size: 18px;
+  font-weight: 700;
+  color: #0000fe;
+  padding-bottom: 15px;
+}
+
+#testimonials .testimonials-slider .testimonials-item .testimonial-text p {
+  color: #666666;
+  margin-bottom: 0;
+}
+
+#testimonials .testimonials-slider .testimonials-item .testimonial-author {
+  display: block;
+  margin-top: 20px;
+}
+
+#testimonials .testimonials-slider .testimonials-item .testimonial-author .author-img {
+  position: relative;
+  overflow: hidden;
+  margin-right: 12px;
+  border-radius: 100%;
+  float: left;
+}
+
+#testimonials .testimonials-slider .testimonials-item .testimonial-author .author-img img {
+  width: 65px;
+  height: 65px;
+}
+
+#testimonials .testimonials-slider .testimonials-item .testimonial-author .author-img::before {
+  top: 0;
+  width: 65px;
+  content: "";
+  position: absolute;
+  border: 3px solid #0000fe;
+  z-index: 1;
+  left: 0;
+  height: 65px;
+  border-radius: 100%;
+}
+
+#testimonials .testimonials-slider .testimonials-item .testimonial-author .author-img::after {
+  top: 3px;
+  width: 60px;
+  content: "";
+  height: 60px;
+  border: 5px solid #fff;
+  position: absolute;
+  left: 3px;
+  border-radius: 100%;
+}
+
+#testimonials .testimonials-slider .testimonials-item .testimonial-author .author-name {
+  padding-top: 5px;
+}
+
+#testimonials .testimonials-slider .testimonials-item .testimonial-author .author-name a {
+  color: #000;
+  font-size: 14px;
+  font-weight: 700;
+}
+
+#testimonials .testimonials-slider .testimonials-item .testimonial-author .author-name p {
+  color: #888888;
+  font-size: 14px;
+}
+
+#testimonials .testimonials-slider .testimonials-item:hover {
+  transform: translateY(-25px);
+  box-shadow: 0px 36px 35px 0px rgba(12, 12, 12, 0.2);
+}
+
+#testimonials .testimonials-slider .testimonials-item:hover .quoute-icon i {
+  color: #ff5520;
+}
+
+#testimonials .testimonials-slider .owl-item {
+  opacity: 0;
+  transition: opacity 500ms;
+}
+
+#testimonials .testimonials-slider .owl-item.active {
+  opacity: 1;
+}
+
+#testimonials .testimonials-slider .owl-dots {
+  text-align: center;
+  margin-top: 30px;
+}
+
+#testimonials .testimonials-slider .owl-dots .owl-dot.active {
+  width: 38px;
+  background-color: #0000fe;
+}
+
+#testimonials .testimonials-slider .owl-dots .owl-dot {
+  width: 28px;
+  height: 5px;
+  margin: 0px 5px;
+  cursor: pointer;
+  border-radius: 30%;
+  display: inline-block;
+  background-color: #ececed;
+  transition: 0.3s all ease-in-out;
+}
+
+#testimonials .testimonials-slider .owl-dots .owl-dot:focus {
+  outline: none;
+}
+
+#testimonials .owl-carousel .owl-stage-outer {
+  overflow: visible;
+}
 /*# sourceMappingURL=style.css.map */
