Testimonials responsive fixed

--- a/assets/scss/components/_testimonials.scss
+++ b/assets/scss/components/_testimonials.scss
@@ -1,5 +1,6 @@
 #testimonials {
   padding-top: 140px;
+  overflow: hidden;
   .testimonials-slider {
     margin-top: 20px;
     margin-bottom: 20px;
