News section style finished

--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -10,3 +10,4 @@
 @import "components/course";
 @import "components/registration";
 @import "components/testimonials";
+@import "components/latset-news";
