--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -417,6 +417,7 @@ ul {
   margin-bottom: 0;
   text-align: center;
   transform: translateX(-50%);
+  width: 100%;
 }
 
 .section-title .section-subtitle {
@@ -1552,5 +1553,178 @@ ul {
 
 #testimonials .owl-carousel .owl-stage-outer {
   overflow: visible;
+}
+
+#latset-news {
+  padding-top: 110px;
+  background-color: #f7f7f7;
+}
+
+#latset-news .section-title .background-title {
+  color: white;
+  opacity: 0.7;
+}
+
+#latset-news .latset-news-slider .news-item {
+  margin: 0 auto;
+  max-width: 370px;
+  background-color: white;
+  transition: 0.3s all ease-in-out;
+  margin-bottom: 40px;
+}
+
+#latset-news .latset-news-slider .news-item .news-img-date {
+  position: relative;
+}
+
+#latset-news .latset-news-slider .news-item .news-img-date .news-img {
+  overflow: hidden;
+}
+
+#latset-news .latset-news-slider .news-item .news-img-date .news-img img {
+  max-width: 100%;
+  transition: 0.4s all ease-in-out;
+}
+
+#latset-news .latset-news-slider .news-item .news-img-date .date {
+  position: absolute;
+  left: 25px;
+  bottom: -30px;
+  padding-top: 13px;
+  width: 80px;
+  height: 80px;
+  border-radius: 3px;
+  background-color: #000;
+  color: white;
+  text-align: center;
+  z-index: 2;
+}
+
+#latset-news .latset-news-slider .news-item .news-img-date .date span {
+  color: #fff;
+  font-size: 30px;
+  font-weight: 700;
+  line-height: 1.1;
+  display: inline-block;
+  font-family: "Fira Sans";
+}
+
+#latset-news .latset-news-slider .news-item .news-img-date .date span:last-child {
+  display: block;
+  font-size: 16px;
+  font-weight: 400;
+  font-family: "Roboto";
+}
+
+#latset-news .latset-news-slider .news-item .news-img-date::before {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  background-color: rgba(0, 0, 0, 0.25);
+  z-index: 1;
+}
+
+#latset-news .latset-news-slider .news-item .news-text {
+  box-shadow: 0px 12px 35px 0px rgba(12, 12, 12, 0.007);
+  padding: 45px 25px;
+}
+
+#latset-news .latset-news-slider .news-item .news-text .comments {
+  color: #0000fe;
+}
+
+#latset-news .latset-news-slider .news-item .news-text .comments a {
+  font-size: 13px;
+  font-weight: 700;
+  margin-right: 25px;
+  position: relative;
+  color: #0000fe;
+  font-family: "Fira Sans";
+}
+
+#latset-news .latset-news-slider .news-item .news-text .comments a:first-child::after {
+  content: "";
+  width: 2px;
+  background-color: #0000fe;
+  position: absolute;
+  top: -3px;
+  right: -15px;
+  height: 20px;
+  font-weight: 700;
+}
+
+#latset-news .latset-news-slider .news-item .news-text h3 {
+  margin-bottom: 15px;
+  position: relative;
+  padding: 10px 0px 15px;
+  border-bottom: 2px solid #eaeaea;
+}
+
+#latset-news .latset-news-slider .news-item .news-text h3 a {
+  color: #000;
+  transition: 0.3s all ease-in-out;
+  font-family: "Fira Sans", sans-serif;
+  font-size: 24px;
+  font-weight: 700;
+}
+
+#latset-news .latset-news-slider .news-item .news-text h3::before {
+  left: 0;
+  bottom: -1px;
+  height: 3px;
+  content: "";
+  width: 37px;
+  position: absolute;
+  background-color: #ff5520;
+}
+
+#latset-news .latset-news-slider .news-item .news-text p {
+  padding-bottom: 14px;
+  color: #555555;
+  font-size: 16px;
+  font-family: "Roboto", sans-serif;
+}
+
+#latset-news .latset-news-slider .news-item .news-text .read-more {
+  color: #000;
+  display: inline-block;
+  font-size: 14px;
+  font-weight: 700;
+  transition: 0.3s all ease-in-out;
+  position: relative;
+}
+
+#latset-news .latset-news-slider .news-item .news-text .read-more::after {
+  left: 0;
+  bottom: 0;
+  content: "";
+  width: 0;
+  height: 0.5px;
+  position: absolute;
+  transition: 0.3s all ease-in-out;
+  background-color: #0000fe;
+}
+
+#latset-news .latset-news-slider .news-item .news-text .read-more:hover {
+  color: #0000fe;
+}
+
+#latset-news .latset-news-slider .news-item .news-text .read-more:hover::after {
+  width: 100%;
+}
+
+#latset-news .latset-news-slider .news-item:hover {
+  box-shadow: 0px 43px 35px 0px rgba(12, 12, 12, 0.11);
+}
+
+#latset-news .latset-news-slider .news-item:hover .news-img-date img {
+  transform: scale(1.2) rotate(5deg);
+}
+
+#latset-news .latset-news-slider .news-item:hover .news-text h3 a {
+  color: #ff5520;
 }
 /*# sourceMappingURL=style.css.map */
