--- a/assets/scss/_tools.scss
+++ b/assets/scss/_tools.scss
@@ -68,6 +68,7 @@
     margin-bottom: 0;
     text-align: center;
     transform: translateX(-50%);
+    width: 100%;
   }
   .section-subtitle {
     font-size: 18px;
