--- a/assets/scss/components/_latset-news.scss
+++ b/assets/scss/components/_latset-news.scss
@@ -1,4 +1,6 @@
 #latset-news {
+  padding-top: 110px;
+  background-color: $bg-gray;
   .section-title {
     .background-title {
       color: white;
@@ -7,16 +9,152 @@
   }
   .latset-news-slider {
     .news-item {
+      margin: 0 auto;
+      max-width: 370px;
+      background-color: white;
+      transition: 0.3s all ease-in-out;
+      margin-bottom: 40px;
       .news-img-date {
+        position: relative;
+        .news-img {
+          overflow: hidden;
+          img {
+            max-width: 100%;
+            transition: 0.4s all ease-in-out;
+          }
+        }
+
+        .date {
+          position: absolute;
+          left: 25px;
+          bottom: -30px;
+          padding-top: 13px;
+          width: 80px;
+          height: 80px;
+          border-radius: 3px;
+          background-color: #000;
+          color: white;
+          text-align: center;
+          z-index: 2;
+          span {
+            color: #fff;
+            font-size: 30px;
+            font-weight: 700;
+            line-height: 1.1;
+            display: inline-block;
+            font-family: "Fira Sans";
+          }
+          span:last-child {
+            display: block;
+            font-size: 16px;
+            font-weight: 400;
+            font-family: "Roboto";
+          }
+        }
+        &::before {
+          content: "";
+          position: absolute;
+          width: 100%;
+          height: 100%;
+          top: 0;
+          left: 0;
+          background-color: rgba(0, 0, 0, 0.25);
+          z-index: 1;
+        }
       }
       .news-text {
+        box-shadow: 0px 12px 35px 0px rgba(12, 12, 12, 0.007);
+        padding: 45px 25px;
         .comments {
+          color: $color-blue;
+          a {
+            font-size: 13px;
+            font-weight: 700;
+            margin-right: 25px;
+            position: relative;
+            color: $color-blue;
+            font-family: "Fira Sans";
+          }
+          a:first-child {
+            &::after {
+              content: "";
+              width: 2px;
+              background-color: $color-blue;
+              position: absolute;
+              top: -3px;
+              right: -15px;
+              height: 20px;
+              font-weight: 700;
+            }
+          }
         }
-        .news-link {
+        h3 {
+          margin-bottom: 15px;
+          position: relative;
+          padding: 10px 0px 15px;
+          border-bottom: 2px solid #eaeaea;
+          a {
+            color: #000;
+            transition: 0.3s all ease-in-out;
+            font-family: $secondary-font;
+            font-size: 24px;
+            font-weight: 700;
+          }
+          &::before {
+            left: 0;
+            bottom: -1px;
+            height: 3px;
+            content: "";
+            width: 37px;
+            position: absolute;
+            background-color: #ff5520;
+          }
         }
+
         p {
+          padding-bottom: 14px;
+          color: #555555;
+          font-size: 16px;
+          font-family: $primary-font;
         }
         .read-more {
+          color: #000;
+          display: inline-block;
+          font-size: 14px;
+          font-weight: 700;
+          transition: 0.3s all ease-in-out;
+          position: relative;
+          &::after {
+            left: 0;
+            bottom: 0;
+            content: "";
+            width: 0;
+            height: 0.5px;
+            position: absolute;
+            transition: 0.3s all ease-in-out;
+            background-color: #0000fe;
+          }
+          &:hover {
+            color: $color-blue;
+            &::after {
+              width: 100%;
+            }
+          }
+        }
+      }
+      &:hover {
+        box-shadow: 0px 43px 35px 0px rgba(12, 12, 12, 0.11);
+        .news-img-date {
+          img {
+            transform: scale(1.2) rotate(5deg);
+          }
+        }
+        .news-text {
+          h3 {
+            a {
+              color: $color-orange;
+            }
+          }
         }
       }
     }
